# uneex_LinuxAppDev

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb1  gdb1_etalon.txt  gdb2  gdb2_etalon.txt  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: Makefile.am  guess.pot  ru.po
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  labgen_ver0.c  p1.patch  p2.patch  p3.patch
10_LibTesting/: configure.ac
10_LibTesting/src/: Makefile.am
10_LibTesting/tests/: grow_test.c  init_test.c  null_test.c  pop_test.c  push_test.c
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: Makefile.am  guess.pot  ru.po
11_Documenting/src/: guess.c
12_InstallPackaging/: CMakeLists.txt  Makefile
12_InstallPackaging/po/ru/: guess.po
12_InstallPackaging/src/: Doxyfile  build.sh  guess.c  guess.h  install.sh  main.c  test.sh  uninstall.sh
12_InstallPackaging/tests/: test_guess.c
